--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Observacoes_Comentarioes.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Observacoes_Comentarioes.form
@@ -136,7 +136,7 @@
         <Component class="javax.swing.JLabel" name="JLBmotoconnect12">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\PC\Desktop\MotoConnect_Projeto\Giampaolo_Projeto_Technight\MotoConnect\src\main\java\imagem_login\motoqueiro.png"/>
+              <Image iconType="2" name="D:\Users\grpereira\Desktop\Giampaolo_Projeto_TechNight\Giampaolo_Projeto_Technight\Giampaolo_Projeto_Technight\MotoConnect\src\main\java\imagem_login\motoqueiro.png"/>
             </Property>
           </Properties>
         </Component>
